Grid: fix size on small devices

--- a/css/component.css
+++ b/css/component.css
@@ -299,12 +299,12 @@ span.nav-close:before {
 
 @media screen and (max-width: 35em) {
 	.grid li {
-		width: 50%;
+		width: auto;
 	}
 }
 
 @media screen and (max-width: 24em) {
 	.grid li {
-		width: 100%;
+		width: auto;
 	}
 }
